# SourceRadiant

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: default_build_menu_goldsrc_ericwtools.xml  default_build_menu_source.xml  gamepacks.cmake  mbspc.cmake  modules.cmake  plugins.cmake  q3map2.cmake
cmake/gamepacks/: goldsrc.cmake  source.cmake
libs/xml/: xmlparser.h
plugins/entity/: angles.h
plugins/image/: crn.cpp  dds.cpp  image.cpp  jpeg.cpp  ktx.cpp  webp.cpp
plugins/imagepvr/: imagepvr.cpp  imagepvr.def  pvr.cpp  pvr.h
plugins/mapvmf/: plugin.cpp
plugins/sourcemodel/: mdl.cpp  plugin.cpp
plugins/vfspk3/: archive.cpp
radiant/: brushmanip.cpp  eclass_fgd_sourcepp.cpp  entityinspector.cpp  filterbar.cpp  findtexturedialog.cpp  gtkdlgs.cpp  map.cpp  patchmanip.cpp  patchmodule.cpp  select.cpp  surfacedialog.cpp  textureentry.h  texwindow.cpp  xywindow.cpp
tools/quake3/common/: inout.cpp  jpeg.cpp  qimagelib.h  vfs.cpp
tools/quake3/q3map2/: image.cpp  model.cpp  q3map2.h
